# vex-coding

./: .gitignore  ENGINEERING.md  README.md  ROADMAP.md  SPEC.md  TEST_REPORT_P5.md
.trae/rule/: vex-coding.trae.md
core/: TEST_REPORT.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
core/src/: index.ts
core/src/config/: index.ts  store.ts
core/src/context/: extractor.ts  index.ts
core/src/llm/: client.ts  index.ts  types.ts
core/src/prompt/: index.ts  system.ts  user.ts
core/src/types/: index.ts
core/tests/: config.test.ts  context.test.ts  llm.test.ts  prompt.test.ts  types.test.ts
idea-plugin/: TEST_REPORT.md  build.gradle.kts  settings.gradle.kts
idea-plugin/src/main/kotlin/com/vex/coding/: VexCodingPlugin.kt
idea-plugin/src/test/kotlin/com/vex/coding/: ConfigServiceTest.kt  (+1 more)
local-engine/: Cargo.toml  TEST_REPORT.md
local-engine/src/: lib.rs  main.rs
local-engine/src/cache/: mod.rs
local-engine/src/graph/: edge.rs  mod.rs  node.rs
local-engine/src/indexer/: language.rs  mod.rs
local-engine/src/search/: mod.rs  symbol.rs
local-engine/src/storage/: mod.rs
vscode-extension/: TEST_REPORT.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/src/commands/: ask.ts  explain.ts  index.ts
vscode-extension/src/config/: index.ts
vscode-extension/src/service/: CompletionService.ts  ContextService.ts  LLMService.ts
vscode-extension/src/views/: ChatView.ts
vscode-extension/test/: completion.test.ts  config.test.ts  context.test.ts  llm.test.ts
(+7 files in other folders)
